--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^20",
         "@types/papaparse": "^5.3.16",
         "@types/react": "^18",
