--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.438.0",
-        "next": "14.2.23",
+        "next": "^15.4.1",
         "papaparse": "^5.5.3",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7"
     },
